2014-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/taper.pl: Fix count of test.

2014-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amarchiver.c: Create parent directory on extraction.

2014-03-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Do not try to find holding space when no
	  holding disk are used.

2014-03-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c: Make a non blocking connection.

2014-03-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Log empty part.
	* server-src/amreport.pl: Fix.
	* installcheck/Amanda_Taper_Scribe.pl: Fix for Scribe change.
	* installcheck/taper.pl: Fix for Scribe change.

2014-03-11  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.h: Fix constant.
	* amar-src/amarchiver.c: Do not append attribute id (16) to filename
	  on extraction.
	* installcheck/Amanda_Archive.pl: Add check.
	* installcheck/amarchiver.pl: Add check.
	* perl/Amanda/Archive.swg: Document and export attribute id.

2014-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/diskflat-device.c: Check lseek result.

2014-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Util.swg (setup_application): Call glib_init.

2014-03-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.h (struct disk_s): Add orig_holdingdisk.
	* server-src/diskfile.c: Set orig_holdingdisk.
	* server-src/driver.c: Use orig_holdingdisk to report error.
	* server-src/planner.c: Improve message.

2014-03-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/Makefile.am: Add diskflat-device.c and diskflat-device.h
	* device-src/device.c: Call diskflat_device_register
	* device-src/diskflat-device.c: New diskflat device.
	* device-src/diskflat-device.h: New diskflat device header file.
	* device-src/vfs-device.c: Refactoring.
	* device-src/vfs-device.h: Refactoring.