@@ -1,4 +1,7 @@
 2014-03-24  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amcheck.c: Warn if tapecycle <= runtapes.
+
+2014-03-24  Jean-Louis Martineau <martineau@zmanda.com>
 	* installcheck/taper.pl: Fix count of test.
 
 2014-03-21  Jean-Louis Martineau <martineau@zmanda.com>
